[HOTFIX] Fix browser crash, table not showing well.

--- a/src/views/app/billings/style.scss
+++ b/src/views/app/billings/style.scss
@@ -30,3 +30,8 @@
     }
   }
 }
+
+.custom-popover {
+  max-height: 130px;
+  overflow: auto;
+}
